Corrects alignment with email signup in footer

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -384,6 +384,7 @@ input[type=search],
 
 .signupform fieldset input {
 	border-right: none;
+	vertical-align: middle;
 	&:hover, &:focus {
 		border: 1px solid @borders-blocks;
 		border-right: none;
